# yandex-query-magics

./: .gitignore  README.md  pyproject.toml
src/yandex_query_magic/: __init__.py  ipythondisplay.py  jinja_template.py  magics.py  main.py  query_results.py  sqltext_parser.py  yq_results.py
tests/: __init__.py  test_formats.py  test_jinja2.py  test_main.py  test_sqlparser.py
